# kurta-check

./: .gitignore  hungarian.py  main.py  out.txt  pyproject.toml
