[project]
name = "kurta-check"
version = "0.1.0"
description = ""
authors = [
    {name = "Matt Struble",email = "4325029+mattstruble@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.3.0.250703"
scipy-stubs = "^1.16.0.2"

